Angular projesi ilk commit

--- a/src/app/tasinmaz-table/tasinmaz-table.component.css
+++ b/src/app/tasinmaz-table/tasinmaz-table.component.css
@@ -7,7 +7,7 @@ body {
   .container {
     text-align: center;
     padding-top: 20px;
-    margin-top: 150px;
+    margin-top: 25px;
   }
   
   .table-title {
@@ -91,13 +91,16 @@ body {
       margin-bottom: 10px; /* Başlık ve tablo arasındaki boşluğu azaltır */
     }
   }
+
+ 
   
   .buttons button {
-    margin-right: 10px;
+    margin: 10px;
     position: relative;
     overflow: hidden;
     transition: all 0.3s ease;
   }
+  
   
   .buttons button::before {
     content: '';
