--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,18 @@
-<app-nav></app-nav>
+<!-- <app-nav></app-nav>
 <app-map></app-map>
-<app-tasinmaz-table></app-tasinmaz-table>
+<app-tasinmaz-table></app-tasinmaz-table> -->
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
+
+
+
 
 
