--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,7 @@
-<div class="map-container">
-    <div id="map" class="map"></div>
-  </div>
-  
+<div [id]="mapId" class="map"></div>
+<div id="scale-line" class="scale-line"></div> <!-- Add this line inside the map container -->
+<div id="mouse-position" class="coordinates">Koordinatlar: </div>
+<button class="btn btn-primary btn-sm" (click)="resetMap()">Reset</button>
+<button class="btn btn-primary btn-sm" (click)="toggleLayer('osm')">OSM</button>
+<button class="btn btn-primary btn-sm" (click)="toggleLayer('google')">Google Maps</button>
+<input type="range" min="0" max="1" step="0.1" (input)="changeOpacity($event)">
