--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,36 +1,30 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<!-- nav.component.html -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary custom-navbar">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand" href="https://odakgis.com.tr/" target="_blank"> <!-- target="_blank" ile yeni sekme -->
+      <img src="assets/odakgis.png" alt="Odak GIS" class="navbar-logo">
+    </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item" *ngIf="isUser()">
+          <button mat-button routerLink="/tasinmaz-table">Mevcut Taşınmazlar Listesi</button>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+        <li class="nav-item" *ngIf="isAdmin()">
+          <button mat-button routerLink="/tasinmaz-table">Mevcut Taşınmazlar Listesi</button>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        <li class="nav-item" *ngIf="isAdmin()">
+          <button mat-button routerLink="/kullanici-listesi">Kullanıcı Listesi</button>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        <li class="nav-item" *ngIf="isAdmin()">
+          <button mat-button routerLink="/log-islemleri">Log İşlemleri</button>
+        </li>
+        <li class="nav-item" *ngIf="loggedIn()">
+          <button mat-button (click)="logOut()">Çıkış</button>
+        </li>
+        <li class="nav-item" *ngIf="!loggedIn()">
+          <button mat-button routerLink="/login">Giriş</button>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
