--- a/src/app/kullanici-add/kullanici-add.component.html
+++ b/src/app/kullanici-add/kullanici-add.component.html
@@ -12,7 +12,7 @@
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>Rol</mat-label>
+    <mat-label>Rol</mat-label> <!--Burada kullanıcının rolunu belirledik-->
     <input matInput formControlName="role">
   </mat-form-field>
 
